Archive2/21/12968e208b0db4/output
main.cpp:8:1: error: expected initializer before 'int'
 int iii=1;
 ^
main.cpp:9:1: error: expected unqualified-id before 'while'
 while (iii<=5)
 ^
